--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,35 +1,41 @@
 name: CI/CD for Dockerized Flask App
 
 on:
-  push:   # events, that need to trigger, push and pull
-    branches: [ main ]   # main branch
+  push: # events, that need to trigger, push and pull
+    branches: [main] # main branch
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
-jobs:  # 2 specific jobs
-  
-  build-and-test:  # jo 1
+jobs: # 2 specific jobs
+  dockerbuild:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build The Docker Image
+        run: docker build . --file DockerFile --tag workflow-test:$(date +%s)
+
+  build-and-test: # jo 1
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3  
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flask
-        pip install pytest  
-      # requirements.txt also ok
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flask
+          pip install pytest
+        # requirements.txt also ok
 
-    - name: Run tests
-      run: |
-        pytest
+      - name: Run tests
+        run: |
+          pytest
 
   build-and-publish:
     needs: build-and-test
@@ -37,25 +43,25 @@ jobs:  # 2 specific jobs
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: ./DockerFile
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./DockerFile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
 
-    - name: Image digest
-      run: echo ${{ steps.build-and-publish.outputs.digest }}
+      - name: Image digest
+        run: echo ${{ steps.build-and-publish.outputs.digest }}
