--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,13 +7,6 @@ on:
     branches: [main]
 
 jobs: # 2 specific jobs
-  dockerbuild:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build The Docker Image
-        run: docker build . --file DockerFile --tag workflow-test:$(date +%s)
-
   build-and-test: # jo 1
     runs-on: ubuntu-latest
 
@@ -59,7 +52,7 @@ jobs: # 2 specific jobs
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./DockerFile
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
 
