--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -54,7 +54,7 @@ jobs: # 2 specific jobs
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest  # image name: flasktest-app
 
       - name: Image digest
         run: echo ${{ steps.build-and-publish.outputs.digest }}
